--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-10 11:30:31
+lastsearch = 2024-08-10 11:55:36
 
 [everon.online]
 match = 50.0%%
@@ -12,8 +12,8 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = 38.2%%
-title = Bộ Ga Chun At-04 Giảm Giá - Everon
+match = 5.9%%
+title = Bộ Ga Chun At-04 Giảm Giá - chăn ga gối đệm Everon
 url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [tiki.vn]
