--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-10 10:47:38
+lastsearch = 2024-08-10 11:59:59
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html?srsltid=AfmBOoquAheMo690nY-M2uj-6P3Tparn6g9oeMCIhqzJkFCqePG9Hm3p
 
 [shopee.vn]
 match = 15.0%%
