--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-10 11:21:27
+lastsearch = 2024-08-10 11:54:55
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOoqmx0hHs7gSkU_FOvE1dCFhH6MzO1NLNRPNOkf7XiRSyKqJPybm
 
 [demxanh.com]
 match = -28.6%%
@@ -19,7 +19,7 @@ url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOop8CDpcuHqj10TG-Dx8lMrUAHJFFqvF7JvVyfnEnRhg0QuewauV
 
 [tiki.vn]
 match = -42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -100.0%%
-title = Tim thai có khi nào? Thời điểm siêu âm tim thai lần đầu
-url = https://www.vinmec.com/vie/bai-viet/tim-thai-co-khi-nao-thoi-diem-sieu-am-tim-thai-lan-dau-vi
+match = -9.5%%
+title = Sự phát triển của thai nhi tuần 23
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-23-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
