--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-10 10:35:44
+lastsearch = 2024-08-10 13:56:40
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = -9.7%%
+title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
+url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
 
 [demxanh.com]
-match = 38.7%%
-title = Chăn ga gối Singapore lụa 5 món L5M18
-url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -52,8 +52,8 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [everonvn.com.vn]
-match = -19.4%%
-title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
+match = -38.7%%
+title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu? - Everon
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
