--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 17.4%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOopI-i3xaN0UY8Gibm_aE4CtN5hf9ToauhSFgDmWzDs_VMMB-P9B
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOooEuf7zjsHK-2kkKkCQighpGb3uRKwlzpHdERsQRtqz3bxod5d1
 
 [shopee.vn]
 match = -78.3%%
