--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-10 11:36:51
+lastsearch = 2024-08-10 13:48:49
 
 [demxanh.com]
 match = -17.6%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOorGzweWyeIVeZwDiLj4LPdZ2JtQkECYcB1G_1zgp6DlYqci5RGu
+url = https://demxanh.com/chieu-truc-den.html
 
 [dem24h.vn]
 match = -29.4%%
