--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-08-10 11:45:50
+lastsearch = 2024-08-10 13:50:56
 
 [dreamland.vn]
 match = -64.0%%
@@ -28,8 +28,8 @@ url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9y
 
 [newsin.ir]
 match = -116.0%%
-title = Healthline nz jobs 1 5 mérföld hány km مواعيد محلات مول مصر في ...
-url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://xn-----7kcbchbkox0ag5apb3asrb4o.xn--p1ai/oTdAvh6fepr
+title = شعر عن اليوم الوطني ٩٢ The moms co review Labial maybelline ...
+url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://dwtao.ru/5826917wwwgoldenpondercomhk4fe43y
 
 [shopee.vn]
 match = 56.0%%
@@ -120,4 +120,9 @@ url = https://demviethome.vn/ruot-goi-dau-dreamland/
 match = -40.0%%
 title = CỐM LỢI SỮA BẢO LONG - Hộp 10 gói x 5g giá sỉ
 url = https://thitruongsi.com/com-loi-sua-bao-long-2402516.html
+
+[www.worldpress.org]
+match = -96.0%%
+title = Jaden smith dead Szpital barska Cortes una 2022 Sabah ...
+url = https://www.worldpress.org/feed.cfm?https://xn--80aeaa1gn.xn--p1ai/28734191rfe43a
 
