--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-10 12:35:38
+lastsearch = 2024-08-10 13:50:13
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -215,4 +215,9 @@ url = https://immunization.dph.ncdhhs.gov/schools/k-12.htm
 match = -210.0%%
 title = Scott County, MN | Official Website
 url = https://www.scottcountymn.gov/
+
+[www.texasattorneygeneral.gov]
+match = -170.0%%
+title = HANDBOOK FOR NONCUSTODIAL PARENTS
+url = https://www.texasattorneygeneral.gov/sites/default/files/files/child-support/Publications/qa-ncp-handbook.pdf
 
