--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-10 10:24:54
+lastsearch = 2024-08-10 13:49:12
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html?srsltid=AfmBOorX7Rgjaga9rZhKUE1h0HjRBeQ3aRb_ty-BjkQfPuLR-qI_nBdm
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
 match = -120.0%%
@@ -24,7 +24,7 @@ url = https://noithatami.com/giuong-ngu-boc-dem-1m8/
 [ninhouse.vn]
 match = -45.0%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap?srsltid=AfmBOootWY2sIASSvkNwcfozHbnMC1WBdHXjY16lhYnuk8q4g6bAesq7
+url = https://ninhouse.vn/collections/drap
 
 [giuongxep.com]
 match = -70.0%%
@@ -67,9 +67,9 @@ title = Giường điện đa chức năng tập đứng DCN-14
 url = https://giuongbenh.com/giuong-dien-da-chuc-nang-tap-dung-dcn-14
 
 [tiki.vn]
-match = -50.0%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = -75.0%%
+title = Thảm trải chân giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải chân giường
 
 [noithattamviet.net]
 match = -10.0%%
@@ -109,12 +109,12 @@ url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-
 [www.lazada.vn]
 match = 15.0%%
 title = Thảm Giường Ngủ Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/tham-giuong-ngu/?srsltid=AfmBOoqg7_L1N05Wc_JIw8b12Qo3eTs28gTiPI1UqixOFk0kQNbp__ec
+url = https://www.lazada.vn/tag/tham-giuong-ngu/
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOor0ddRXY8iOfeRvQoGLVmgH7Gb7_zHCSbiyNxD5Zc13FdAU1LwW
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.sendo.vn]
 match = -95.0%%
@@ -279,5 +279,5 @@ url = https://www.mdfuni.com/san-pham/combo-giuong-tu-hien-dai-nhap-khau-mdc-14/
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14?srsltid=AfmBOoo3x1jiB8MXJIVWkexU2dw5gX6YSyrafoCB7BKz1Nh4V_TfpLe1
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
 
