--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-10 13:44:54
+lastsearch = 2024-08-10 14:25:55
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -109,7 +109,7 @@ url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual 
 [drhc-cosmetics.com]
 match = -71.4%%
 title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOorTyQ43EL9r067f_0H1WwsSBhVgGwd_6Tsqg2aTDkr6NJIuSsux
 
 [quangduc.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = -21.4%%
-title = NGỌC NGA store -Mỹ PHẨM NHẬT KIM ANH- 台灣
-url = https://m.facebook.com/p/NGỌC-NGA-store-Mỹ-PHẨM-NHẬT-KIM-ANH-台灣-100085169254296/
+match = -35.7%%
+title = Chiều nay em co 30kg ghẹ xanh to chăc mẩy ủ đá tươi ...
+url = https://m.facebook.com/groups/2393083487434360/posts/7839014392841215/
 
 [dabanhmat.com]
 match = -28.6%%
