--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-10 12:12:30
+lastsearch = 2024-08-10 14:27:22
 
 [demxanh.com]
 match = -14.8%%
@@ -145,4 +145,9 @@ url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 match = -18.5%%
 title = Chiếu Điều Hoà Cho Bé Bằng Sợi Mây Thoáng Mát, Trải ...
 url = https://timikid.com/chieu-dieu-hoa-cho-be-bang-soi-may-thoang-mat-trai-dem-va-noi-kich-thuoc-60x110cm
+
+[olbedding.com]
+match = -25.9%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
