--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-10 07:59:27
+lastsearch = 2024-08-10 14:33:17
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoobrYxXhQryF_ZZpLe-uSMiMgSJSYc63fseeBrbsYNpudJwveZr
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [thegioidemviet.vn]
 match = -19.2%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [thegioidemonline.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html?srsltid=AfmBOorZ8h8AyRkfX8bHYIUTrQR7DZjaKiiZEnTXrRS7dsbo2QiUFMeG
+url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [shopee.vn]
-match = 53.8%%
-title = CHIẾU ĐIỀU HÒA kích thước 120x190 cm
-url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-kích-thước-120x190-cm-i.63828245.1164568361
+match = -7.7%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [thegioichieutruc.com]
 match = -65.4%%
@@ -54,7 +54,7 @@ url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 [www.lazada.vn]
 match = -15.4%%
 title = CHIẾU ĐIỀU HOÀ 160 X 190CM SỢI MÂY TỔNG HỢP, ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-160-x-190cm-soi-may-tong-hopchieu-lua-3d-sieu-dep-chieu-ngu-cuc-ki-thoang-mat-chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chat-luong-cao-i2037854283.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-160-x-190cm-soi-may-tong-hopchieu-lua-3d-sieu-dep-chieu-ngu-cuc-ki-thoang-mat-chieu-dieu-hoa-soi-may-tong-hop-cao-cap-chat-luong-cao-i1925719340.html
 
 [chieutrelanlan.com]
 match = 0.0%%
