--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-10 13:47:47
+lastsearch = 2024-08-10 14:38:23
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -157,8 +157,8 @@ title = aDz giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=aDz
 
 [www.vietnamairport.vn]
-match = -213.3%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
+match = -240.0%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [bocongan.gov.vn]
