--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-08-10 13:25:41
+lastsearch = 2024-08-10 14:31:33
 
 [demxanh.com]
 match = -94.1%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOoqNfQpB07fuKqqUWsK_gPATM7WQ4_KC4awnRL5yZUaHuB2kwIoZ
 
 [chieutrelanlan.com]
 match = -76.5%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -105.9%%
-title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
+match = -35.3%%
+title = Chiếu trúc hạt đen không viền loại đẹp
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-loại-đẹp-i.270303342.9119500161
 
 [vongxepsaigon.vn]
 match = 47.1%%
