--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-10 12:37:46
+lastsearch = 2024-08-10 14:35:43
 
 [www.diepxuan.com]
 match = 36.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [www.lazada.vn]
 match = -127.3%%
 title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
-url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html?srsltid=AfmBOop2J_cJvDVZjyL_QSfNRv5RDUAgsjiIRciwi-6_wg2LqtazP22z
+url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
 
 [flexhouse.vn]
 match = -104.5%%
@@ -157,8 +157,8 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -95.5%%
-title = Ga Chun 140 x 200 cm Bọc Nệm Cotton ... - JYSK.vn
+match = -90.9%%
+title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
 url = https://jysk.vn/ga-chun-140x200cm
 
 [noithatcaco.vn]
