--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -27,9 +27,9 @@ title = Chăn nhung tuyết hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [ninhouse.vn]
 match = 37.5%%
