--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-10 15:44:58
+lastsearch = 2024-08-10 16:42:34
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -52.4%%
-title = Chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chăn phao
+match = -114.3%%
+title = Chăn phao trần bông dày loại 1 bông hơi siêu nhẹ cao cấp ...
+url = https://shopee.vn/Chăn-phao-trần-bông-dày-loại-1-bông-hơi-siêu-nhẹ-cao-cấp-được-chọn-màu-i.78513158.5470278231
 
 [suongtuyet.com]
 match = 28.6%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -76.2%%
 title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/?srsltid=AfmBOoobVGm_QlUCGywiEBsjMy4T80nzqMDl6meSKSIXocWT-Vvdgh_p
+url = https://www.lazada.vn/tag/chan-men-phao/
 
 [docauquanghuy.com]
 match = -33.3%%
