--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-10 10:42:37
+lastsearch = 2024-08-10 16:39:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 09/08: Tâm lý phân vân vẫn ...
-url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0908-tam-ly-phan-van-van-con-hien-huu-585-1217868.htm
+match = -231.2%%
+title = Phân tích kỹ thuật phiên chiều 08/08: Thị trường diễn biến ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0808-thi-truong-dien-bien-giang-co-585-1217515.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -432,9 +432,9 @@ title = Đi xe đạp ngược chiều trên cao tốc, 1 cậu bé đi lạc đ
 url = https://suckhoedoisong.vn/di-xe-dap-nguoc-chieu-tren-cao-toc-1-cau-be-di-lac-duoc-csgt-ho-tro-169240621123917145.htm
 
 [www.cgv.vn]
-match = 6.2%%
-title = CGV Buôn Mê Thuột
-url = https://www.cgv.vn/default/cinox/site/cgv-buon-me-thuot
+match = 0.0%%
+title = CGV Xuân Diệu
+url = https://www.cgv.vn/default/cinox/site/cgv-d-le-roi-soleil
 
 [developers.cloudflare.com]
 match = -31.2%%
@@ -935,4 +935,14 @@ url = https://baophutho.vn/loat-phim-chieu-rap-thang-8-197265.htm
 match = -206.2%%
 title = Phim mới chiếu 9 tiếng đã kiếm 95 tỷ, nữ chính phất lên ...
 url = https://cafef.vn/phim-moi-chieu-9-tieng-da-kiem-95-ty-nu-chinh-phat-len-nho-mang-danh-ban-sao-song-hye-kyo-188240809195935302.chn
+
+[www.thst.vn]
+match = 8.3%%
+title = Lục lạc vàng
+url = https://www.thst.vn/p/luc-lac-vang
+
+[httlvn.org]
+match = -200.0%%
+title = HT An Lạc Tây: Bồi Linh Thông Công Phụ nữ Khu vực 13 ...
+url = https://httlvn.org/ht-an-lac-tay-boi-linh-thong-cong-phu-nu-khu-vuc-13-nam-2024.html
 
