--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-10 15:34:54
+lastsearch = 2024-08-10 16:42:55
 
 [noithathomy.com]
 match = -42.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-N
 [www.lazada.vn]
 match = 23.8%%
 title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html?srsltid=AfmBOopBOrbaVg5_qJU7xMnvdmxoDEzix-__FLIzirvaHtBSmAmGn0ya
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
 match = -85.7%%
@@ -54,7 +54,7 @@ url = https://thamsanulisuky.com/san-pham/tham-bali-2mx3m-trai-san-phong-ngu/
 [metric.vn]
 match = -109.5%%
 title = Báo cáo thị trường Thảm phòng khách 3m dành cho doanh ...
-url = https://metric.vn/tham-phong-khach-3m?srsltid=AfmBOopGpOBMP-9bLIoePuhZBWYAb8n6oLKbOPQvON1FJJELYms2ATWj
+url = https://metric.vn/tham-phong-khach-3m
 
 [giadunghienhoa.com]
 match = -38.1%%
