--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-10 15:21:01
+lastsearch = 2024-08-10 16:32:11
 
 [everonvn.com.vn]
-match = -94.4%%
-title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
+match = -11.1%%
+title = Vỏ Gối Everon Guardian Giảm Giá
+url = https://everonvn.com.vn/everon/2269/vo-goi-everon-guardian
 
 [www.lazada.vn]
 match = -161.1%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Vỏ gối EP1818 45x65
 url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
 
 [www.everonqb.com]
-match = -100.0%%
-title = Vỏ gối EP1812 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-ep1812-45x65.html
+match = -111.1%%
+title = Vỏ gối EPC19056 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epc19056-45x65.html
 
 [shopee.vn]
 match = -127.8%%
